Refactor: extract magic values to constants and env config